test/spec_vectors/load64/fail/module_22.wat
(module (memory i64 1) (func $load16_s_i64 (i64.load16_s (i64.const 0))))